--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Adil's Blog                          # the main title
+title: Adils Blog                          # the main title
 
 tagline: My personal blog   # it will display as the sub-title
 
