--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >-                        # used by seo meta and the atom feed
   My personal blog where I write about cyber security. Technical articles and cyber security news are shared on this site.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://adilsoybali.github.io'
+url: 'https://blog.adilsoybali.com'
 
 github:
   username: adilsoybali             # change to your github username
