--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/img/logo/logoo.jpg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
