--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/logo/logo.png
+avatar: '/assets/img/logo/logo.png'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
